# chainlit-graphql

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  README.md  docker-compose-external-db.yml  docker-compose-local.yml  docker-compose.yml  key_generation.py  main.py  pyproject.toml
chainlit_graphql/api/: deps.py
chainlit_graphql/api/v1/: api.py
chainlit_graphql/api/v1/endpoint/: upload_routes.py
chainlit_graphql/api/v1/graphql/: graphql_app.py
chainlit_graphql/api/v1/graphql/resolver/: mutation.py  query.py
chainlit_graphql/api/v1/graphql/scalars/: json_scalar.py
chainlit_graphql/api/v1/graphql/schema/: role.py  (+6 more)
chainlit_graphql/core/: config.py  mappers.py  security.py
chainlit_graphql/db/: base.py  database.py  initial_data.py
chainlit_graphql/model/: __init__.py  apikey.py  feedback.py  participant.py  score.py  step.py  thread.py  user.py
chainlit_graphql/repository/: apikey.py  feedback.py  participant.py  score.py  step.py  thread.py  user.py
chainlit_graphql/schema/: upload_file_request.py
chainlit_graphql/service/: apikey.py  feedback.py  participant.py  s3_service.py  score.py  step.py  thread.py  user.py
tests/: __init__.py  conftest.py  docker-compose.yml  test_db_migration.py  test_initial_data.py  test_mutation.py  test_query.py  test_repo_feedback.py  test_repo_participant.py  test_repo_score.py  test_repo_step.py  test_repo_thread.py  test_repo_user.py  test_s3_service.py  test_service_feedback.py  test_service_participant.py  test_service_score.py  test_service_step.py  test_service_thread.py  test_service_user.py
